@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 2020-xx-xx  Release 7.32.2                                     ---
 ----------------------------------------------------------------------
 
+* added -v verbosity option to MGED tree command - Cliff Yapp
 * updated Archer to set cwd=HOME when run without args - Cliff Yapp
 * updated rtwizard to set cwd=HOME when run without args - Cliff Yapp
 * updated MGED to set cwd=HOME when run without args - Cliff Yapp
